@@ -259,7 +259,7 @@ public class JsonPropertyWriter extends AbstractPropertyWriter {
         LOG.trace("Property name is '{}' and its value is '{}'", property.getName(), value);
         Type type = getType(value);
         if (type == null) {
-            String msg = String.format("Field type %s is not found in entity data model", field.getType());
+            String msg = "Field type %s is not found in entity data model".formatted(field.getType());
             LOG.error(msg);
             throw new ODataRenderException(msg);
         }
